# raspberry-pi-scr

./: .gitignore  Makefile
docker/aarch64/github-actions/: Dockerfile
docker/aarch64/python/: Dockerfile  Dockerfile.bak2  pyproject.toml
docker/aarch64/sonar-scanner/: .swp  Dockerfile
dotfiles/: .vimrc  .zshrc
forgejo-runner/: docker-compose.yml
forgejo-runner/common/: setup.sh
forgejo-runner/docker/: docker-compose.yml  setup.sh
k8s/: config-map.yaml  deployment-postgre.yaml  secrets.yaml  service.yaml
k8s/postgre/: deployment.yaml
passbolt/: docker-compose-ce.yaml  setup.sh  traefik.yaml
ubuntu/: dev.sh  setup.sh  zsh.sh
