[project]
name = "portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "iliyan-kostov", email = "iliyan.kostov@email.ikostov.org"},
]
dependencies = [
    "Django>=5.1.1",
    "pybuilder>=0.13.13",
    "mockito>=1.5.1",
    "setuptools>=75.1.0",
    "pyre-check>=0.9.22",
    "fb-sapp>=0.5.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL"}


[tool.pdm]
distribution = false

